fix donation modal width on mobile

--- a/src/features/public/Donations/styles/TreeDonation.module.scss
+++ b/src/features/public/Donations/styles/TreeDonation.module.scss
@@ -4,7 +4,7 @@
   background-color: $backgroundColor;
   border-radius: 7px;
   padding: 26px;
-  width: 412px;
+  max-width: 412px;
   height: max-content;
   z-index: 10;
 }
